--- a/app/src/main/res/layout/activity_rider_portal.xml
+++ b/app/src/main/res/layout/activity_rider_portal.xml
@@ -5,118 +5,139 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".IT19208718.RiderPortal"
-    android:background="@drawable/bg">
+    android:background="@drawable/rider_portal_bg">
 
 
-    <TextView
-        android:id="@+id/theRiderName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/amarante"
-        android:text="@string/rider_profile"
-        android:textColor="#FFFFFF"
-        android:textSize="36sp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:cardCornerRadius="50dp"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.88"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.029" />
+        app:layout_constraintVertical_bias="0.75">
+
+        <ImageView
+            android:id="@+id/loadRiderDP"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/default_picture" />
 
 
-    <ImageView
-        android:id="@+id/loadRiderDP"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+    </androidx.cardview.widget.CardView>
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.188" />
-
-    <Button
-        android:id="@+id/OrdersForDistributionButton"
-        android:layout_width="220dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:text="@string/rider_profile_order_for_distribution"
-        android:textColor="#0027FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.474" />
-
-    <Button
-        android:id="@+id/DistributedOrdersButton"
-        android:layout_width="220dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:text="@string/rider_profile_distributed_orders"
-        android:textColor="#0027FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.655" />
 
     <Button
         android:id="@+id/assignedOrdersForMe"
-        android:layout_width="220dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:text="Assigned Orders For ME"
-        android:textColor="#0027FF"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:background="@drawable/edittext_items"
+        android:drawableEnd="@drawable/deliver_now_icon"
+        android:drawablePadding="5dp"
+        android:padding="5dp"
+        android:text="Assigned Orders"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintEnd_toStartOf="@+id/cardView"
+        app:layout_constraintHorizontal_bias="0.312"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.838" />
+        app:layout_constraintVertical_bias="0.666" />
+
+    <Button
+        android:id="@+id/OrdersForDistributionButton"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:background="@drawable/edittext_items"
+        android:drawableEnd="@drawable/new_orders_icon"
+        android:drawablePadding="5dp"
+        android:padding="5dp"
+        android:text="Fresh Orders"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/earningHistory"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.355" />
 
     <Button
         android:id="@+id/MyAccountRiderButton"
-        android:layout_width="220dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:background="@drawable/edittext_items"
+        android:drawableEnd="@drawable/user_account_icon"
+        android:drawablePadding="5dp"
+        android:padding="5dp"
         android:text="@string/rider_profile_manage_account"
-        android:textColor="#0027FF"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.888"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.746" />
+        app:layout_constraintVertical_bias="0.515" />
+
+    <Button
+        android:id="@+id/DistributedOrdersButton"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:background="@drawable/edittext_items"
+        android:drawableEnd="@drawable/order_history_icon"
+        android:drawablePadding="5dp"
+        android:padding="5dp"
+        android:text="@string/rider_profile_distributed_orders"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/MyAccountRiderButton"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.515" />
+
+    <Button
+        android:id="@+id/earningHistory"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:background="@drawable/edittext_items"
+        android:drawableEnd="@drawable/money_icon"
+        android:drawablePadding="5dp"
+        android:padding="5dp"
+        android:text="Earning History"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.355" />
 
     <Button
         android:id="@+id/riderLogOutButton"
         android:layout_width="220dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
+        android:layout_height="50dp"
+        android:padding="5dp"
+        android:background="@drawable/edittext_items"
         android:text="@string/rider_profile_logout"
-        android:textColor="#0027FF"
+        android:textColor="#000000"
+        android:drawablePadding="5dp"
+        android:drawableEnd="@drawable/user_logout_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.928" />
-
-    <Button
-        android:id="@+id/earningHistory"
-        android:layout_width="220dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:text="Earning History"
-        android:textColor="#0027FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.57" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
