--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".IT19208718.SetNewPassword"
-    android:background="@drawable/rider_rese_password_screen">
+    android:background="@drawable/set_new_password_bg">
 
     <TextView
         android:id="@+id/resetPasswordMobiletxt"
@@ -26,8 +26,9 @@
 
         android:id="@+id/newPassword"
         android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/rounded_edittext"
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="@drawable/edittext_items"
         android:inputType="textPersonName"
         android:paddingStart="20dp"
         android:textColor="#3F51B5"
@@ -45,9 +46,9 @@
         android:id="@+id/backToRiderLogin"
         android:layout_width="130dp"
         android:layout_height="50dp"
-        android:background="@drawable/rounded_edittext"
+        android:background="@drawable/edittext_items"
         android:text="Back to login"
-        android:textColor="#0027FF"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
@@ -59,12 +60,12 @@
         android:id="@+id/resetRiderPwdNow"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:background="@drawable/rounded_edittext"
+        android:background="@drawable/edittext_items"
         android:text="Reset Now"
-        android:textColor="#0027FF"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintEnd_toStartOf="@+id/backToRiderLogin"
+        app:layout_constraintHorizontal_bias="0.44"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.875" />
