--- a/app/src/main/res/layout/activity_add_new_rider.xml
+++ b/app/src/main/res/layout/activity_add_new_rider.xml
@@ -5,143 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".IT19208718.AddNewRider"
-    android:background="@drawable/add_new_rider_bg">
+    android:background="@drawable/add_rider_bg">
 
-
-    <EditText
-        android:id="@+id/riderPassword"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="Password"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:textColor="#B53F3F"
-        android:fontFamily="@font/amarante"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#0027FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.898"
-        tools:ignore="RtlSymmetry" />
-
-    <EditText
-        android:id="@+id/riderBikeNumber"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="@string/rider_bike_number"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:fontFamily="@font/amarante"
-        android:textColor="#3F51B5"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#0027FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.712"
-        tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/riderName"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="@drawable/edittext_items"
+        android:fontFamily="@font/amarante"
         android:hint="@string/rider_name"
         android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:fontFamily="@font/amarante"
-        android:textColor="#3F51B5"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#0027FF"
+        android:paddingStart="15dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
+        app:layout_constraintHorizontal_bias="0.137"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.424"
-        tools:ignore="RtlSymmetry" />
-
-    <EditText
-        android:id="@+id/riderCommission"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="@string/rider_commission"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:fontFamily="@font/amarante"
-        android:textColor="#3F51B5"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#0027FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.804"
+        app:layout_constraintVertical_bias="0.421"
         tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/riderNic"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="@drawable/edittext_items"
+        android:fontFamily="@font/amarante"
         android:hint="@string/rider_nic"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:fontFamily="@font/amarante"
-        android:textColor="#3F51B5"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#0027FF"
+        android:paddingStart="15dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
+        app:layout_constraintHorizontal_bias="0.137"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.522"
+        app:layout_constraintVertical_bias="0.524"
         tools:ignore="RtlSymmetry" />
-
-    <EditText
-        android:id="@+id/riderMobile"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:hint="@string/rider_mobile_number"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:fontFamily="@font/amarante"
-        android:textColor="#3F51B5"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#0027FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.614"
-        tools:ignore="RtlSymmetry" />
-
-    <Button
-        android:id="@+id/addNewRider"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:background="@drawable/rounded_edittext"
-        android:text="@string/rider_btn"
-        android:fontFamily="@font/amarante"
-        android:textColor="#0027FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.858"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.896" />
 
     <ImageView
         android:id="@+id/riderProfilePicture"
@@ -151,10 +53,10 @@
         android:src="@drawable/choose_photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.858"
+        app:layout_constraintHorizontal_bias="0.893"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.735" />
+        app:layout_constraintVertical_bias="0.725" />
 
     <TextView
         android:id="@+id/riderMobileUpdated"
@@ -168,9 +70,99 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.858"
+        app:layout_constraintHorizontal_bias="0.893"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.524" />
+
+    <Button
+        android:id="@+id/addNewRider"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:padding="5dp"
+        android:background="@drawable/edittext_items"
+        android:fontFamily="@font/amarante"
+        android:text="@string/rider_btn"
+        android:textColor="#000000"
+        android:drawableEnd="@drawable/add_new_user_"
+        android:drawablePadding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.893"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.921" />
+
+    <EditText
+        android:id="@+id/riderMobile"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="@drawable/edittext_items"
+        android:fontFamily="@font/amarante"
+        android:hint="@string/rider_mobile_number"
+        android:paddingStart="15dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.625"
+        tools:ignore="RtlSymmetry" />
+
+    <EditText
+        android:id="@+id/riderPassword"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="@drawable/edittext_items"
+        android:fontFamily="@font/amarante"
+        android:hint="Password"
+        android:paddingStart="15dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.92"
+        tools:ignore="RtlSymmetry" />
+
+    <EditText
+        android:id="@+id/riderCommission"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="@drawable/edittext_items"
+        android:fontFamily="@font/amarante"
+        android:hint="@string/rider_commission"
+        android:paddingStart="15dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.82"
+        tools:ignore="RtlSymmetry" />
+
+    <EditText
+        android:id="@+id/riderBikeNumber"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:background="@drawable/edittext_items"
+        android:fontFamily="@font/amarante"
+        android:hint="@string/rider_bike_number"
+        android:paddingStart="15dp"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.723"
+        tools:ignore="RtlSymmetry" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
