--- a/app/src/main/res/layout/activity_orders_for_distribution.xml
+++ b/app/src/main/res/layout/activity_orders_for_distribution.xml
@@ -6,18 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".IT19208718.OrdersForDistribution"
-    android:background="@drawable/delivery_boy_order_list_bg">
+    android:background="@drawable/orders_for_distribution_bg">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/orderListRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="431dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
         android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.026"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
