--- a/app/src/main/res/layout/activity_supplier_interface.xml
+++ b/app/src/main/res/layout/activity_supplier_interface.xml
@@ -23,9 +23,9 @@
 
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="212dp"
-        android:layout_height="103dp"
+        android:id="@+id/DbSupplierImg"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/default_picture"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,11 +47,11 @@
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.663"
+        app:layout_constraintVertical_bias="0.698"
         tools:ignore="OnClick" />
 
     <Button
-        android:id="@+id/receivedRequestItem"
+        android:id="@+id/receivedRequestItem8"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
@@ -59,24 +59,24 @@
         android:textColor="#0027FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.424" />
+        app:layout_constraintVertical_bias="0.482" />
 
     <Button
-        android:id="@+id/DailyReceivedReport"
+        android:id="@+id/UpdateSupplierAccount"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:background="@drawable/rounded_edittext"
-        android:text="@string/daily_received_report"
+        android:text="Update Account"
         android:textColor="#0027FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.546" />
+        app:layout_constraintVertical_bias="0.587" />
 
     <Button
         android:id="@+id/supplierLogOut"
@@ -87,10 +87,10 @@
         android:textColor="#0027FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.781" />
+        app:layout_constraintVertical_bias="0.813" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
