--- a/app/src/main/res/layout/activity_owner_portal.xml
+++ b/app/src/main/res/layout/activity_owner_portal.xml
@@ -161,7 +161,7 @@
         app:layout_constraintVertical_bias="0.66" />
 
     <Button
-        android:id="@+id/dhffdh"
+        android:id="@+id/manageSuppliers"
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:background="@drawable/edittext_items"
