--- a/app/src/main/res/layout/request_supply_order_home.xml
+++ b/app/src/main/res/layout/request_supply_order_home.xml
@@ -71,7 +71,7 @@
         android:id="@+id/supplierRequestRemove"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/bg"
+        android:src="@drawable/delete_completed_orders_by_rider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
@@ -116,7 +116,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.59000003"
-        app:srcCompat="@drawable/bg" />
+        app:srcCompat="@drawable/req_new_supply_icon" />
 
 
 
