new changes menura after

--- a/app/src/main/res/layout/activity_request_supply_order_home.xml
+++ b/app/src/main/res/layout/activity_request_supply_order_home.xml
@@ -28,8 +28,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="181dp"
         android:layout_marginBottom="15dp"
-        android:text="Total Suppliers Are Available :"
-        android:textSize="18sp"
+        android:text="Total Number Of Received Requests :"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/supplierOrderRecyclerView1"
         app:layout_constraintEnd_toEndOf="parent"
